Support codestarts of extensions outside catalog